No se JSON ayudaaaaa

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,6 +124,15 @@
             ]
         }
     </string>
+    <string name="jsonInscripcion">
+
+        "Inscripcion":[{
+        "materia":"Quimica",
+        "estatus":"Cursando",
+        "profesor":"Profesor A",
+        "hora":"Matutino"
+        }]
+    </string>
     <string name="title_activity_sesion">Sesion</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
